<?xml version="1.0"?> <!--XML版本-->
<package> <!--根标记文件  必备标签-->


<!--
  pacakge.xml包含了package的名称、版本号、内容描述、维护人员、软件许可、编译构建工具、编译依赖、运行依赖等信息。
  实际上rospack_find、rosdep等命令就是直接读取pacakge中的package.xml文件，为用户提供了快速了解一个pacakge的渠道。
  package现有两种版本同时存在：<package>或者<package format="2">。
-->




  <!--包名       必备标签	包的属性-->
  <name>tof_dev_sdk_demo</name>

  <!--版本号  	  必备标签	包的属性-->
  <version>1.0.0</version>

  <!--内容描述    必备标签	包的属性-->
  <description>The tof_dev_sdk_demo package</description>

  <!--维护者     必备标签	包的属性-->
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="xrjiang@sunnyoptical.com">jiangxiaorong</maintainer>
  <maintainer email="zngzhangy@sunnyoptical.com">zhangyan</maintainer>

  <!--软件许可证  必备标签	包的属性-->
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <!--url-->
  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/beginner_tutorials</url> -->

  <!--作者-->
  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="xrjiang@sunnyoptical.com">jiangxiaorong</author>
  <author email="zngzhangy@sunnyoptical.com">zhangyan</author>

  <!--编译构建工具，通常为catkin，编译相关信息，表示编译工具为catki-->
  <buildtool_depend>catkin</buildtool_depend>

  <!--编译依赖项，与Catkin中的编译相关信息，表示编译时需要依赖以下包-->  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nodelet</build_depend>

  <!--运行依赖项，编译相关信息，表示运行时需要依赖以下包-->  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nodelet</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/sunny_tof_camera.xml"/>
  </export>

</package>
